# atma17

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  ensemble.py  pyproject.toml  solution.md
.devcontainer/: devcontainer.json
docs/: logs.md  memo.md  todo.md
notebooks/: eda000.ipynb  errs_analysis000.ipynb
scripts/eda/: eda000.py
src/: constants.py  log.py  metrics.py  optim.py  run.py  train_tools.py  utils.py
src/exp/exp000/: config.py  models.py  test.py  train.py
src/exp/exp001/: models.py  test.py  train.py
src/exp/exp002/: test.py  train.py
src/exp/exp003/: models.py  test.py  train.py
src/exp/exp004/: models.py  train.py
src/exp/exp005/: models.py  train.py  train_gdbt.py
src/exp/exp006/: models.py  train.py
src/exp/exp007/: models.py  train.py
